--- a/PROYECTO/html/Admin/reportes.html
+++ b/PROYECTO/html/Admin/reportes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Validación</title>
+    <title>Reportes</title>
     <link rel="stylesheet" href="../../public/css/main.css">
 </head>
 <body class="body__usuarios">
@@ -15,13 +15,27 @@
                     <a class="logo__texto">EduXplora</a>
                 </h1>
                 <ul>
-                    <li><a href="vinculacion.html">Buscar</a></li>
-                    <li><a href="validacionvisita.html">Validación</a></li>
+                    <li><a href="admin.html">Usuarios</a></li>
+                    <li><a href="reportes.html">Reportes</a></li>
+                    <li><a href="materias.html">Materias</a></li>
                     <li><a href="../index.html" class="btn btn-cta">Salir</a></li>
                 </ul>
             </nav>
         </header>
     </div>
     
+    <div class="container__admin">
+            <div class="titulo__busqueda">
+                <h1 class="Bus_titulo">Reportes de la Plataforma</h1>
+                <p>Accede a datos precisos y relevantes con nuestra herramienta de generación de reportes.</p>
+            </div>
+        </div>
+
+    </div>
+    
+
+    <footer class="footer">
+        <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
