--- a/PROYECTO/html/Coordinador/validacion.html
+++ b/PROYECTO/html/Coordinador/validacion.html
@@ -4,8 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validación</title>
+    <link rel="stylesheet" href="../../public/css/main.css">
 </head>
-<body>
+<body class="body__usuarios">
+    <div class="container__header">
+        <header>
+            <nav>
+                <h1 class="logo__contenedor">
+                    <img src="../../img/LOGO.png" width="15%" alt="EduXplora">
+                    <a class="logo__texto">EduXplora</a>
+                </h1>
+                <ul>
+                    <li><a href="coordinador.html">Buscar</a></li>
+                    <li><a href="validacion.html">Validación</a></li>
+                    <li><a href="../index.html" class="btn btn-cta">Salir</a></li>
+                </ul>
+            </nav>
+        </header>
+    </div>
     
 </body>
 </html>
