--- a/PROYECTO/html/Admin/loginnuevo.html
+++ b/PROYECTO/html/Admin/loginnuevo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login:EduXplora</title>
-    <link rel="stylesheet" href="../public/css/main.css">
+    <link rel="stylesheet" href="../../public/css/main.css">
 
 </head>
 <body>
@@ -15,7 +15,7 @@
                     <a class="logo__texto">EduXplora</a>
                 </h1>
                 <ul>
-                    <li><a href="index.html"class="btn btn-cta">Regresar</a></li>
+                    <li><a href="admin.html"class="btn btn-cta">Regresar</a></li>
                 </ul>
             </nav>
         </header>
@@ -23,9 +23,9 @@
         <div class="recuadro__login">
             <form class="formulario_login">
                 <main class="main__login">
-                    <h1 class="contacto__contenido">Login</h1>
+                    <h1 class="contacto__contenido">Nuevo Usuario</h1>
                     <div class="contacto__contenido">
-                        <p>Ingresa Usuario y Contraseña</p>
+                        <p>Crea Usuario y Contraseña</p>
                     </div> <!-- nosotros contenido -->
                 </main>
                 <div class="campo__login">
@@ -47,7 +47,7 @@
                         >
                     </div>
                     <div class="contenedor izquierda margen">
-                        <input type="submit" value="Enviar" class="btn btn-cta">
+                        <input type="submit" value="Guardar" class="btn btn-cta">
                     </div>
                 </form>
         </div>
