--- a/PROYECTO/html/Admin/materias.html
+++ b/PROYECTO/html/Admin/materias.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Solicitudes</title>
+    <title>Materias</title>
     <link rel="stylesheet" href="../../public/css/main.css">
 </head>
 <body class="body__usuarios">
@@ -15,23 +15,27 @@
                     <a class="logo__texto">EduXplora</a>
                 </h1>
                 <ul>
-                    <li><a href="docente.html">Buscar</a></li>
-                    <li><a href="solicitudes.html">Solicitudes</a></li>
+                    <li><a href="admin.html">Usuarios</a></li>
+                    <li><a href="reportes.html">Reportes</a></li>
+                    <li><a href="materias.html">Materias</a></li>
                     <li><a href="../index.html" class="btn btn-cta">Salir</a></li>
                 </ul>
             </nav>
         </header>
     </div>
-    <div class="recuadro">
-        <h1>Solicitudes realizadas</h1>
-        <main class="contenedor">
-            <p>Aqui podaras consultar las solicitudes realizadas y revisar su estado</p>
-        </main>
+
+        <div class="container__admin">
+            <div class="titulo__busqueda">
+                <h1 class="Bus_titulo">Actualizar Materias y sus Objetivos</h1>
+                <p>¡Mantén tus datos académicos al día! Accede fácilmente para actualizar información sobre las materias y garantiza una gestión eficiente.</p>
+            </div>
+
+        </div>
+
     </div>
 
     <footer class="footer">
         <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
     </footer>
-    
 </body>
 </html>
