--- a/PROYECTO/html/Admin/admin.html
+++ b/PROYECTO/html/Admin/admin.html
@@ -33,13 +33,13 @@
         <div class="recuadro">
             <div class="userBlocks">
                 <div class="userBlock">
-                    <a class="userBlock__enlace" href="../../html/Admin/loginnuevo.html">Docente</a>
+                    <a class="userBlock__enlace" href="../../html/Admin/logindocente.html">Docente</a>
                 </div><!-- userBlock  -->
                 <div class="userBlock">
-                    <a class="userBlock__enlace" href="../../html/Admin/loginnuevo.html">Vinculación</a>
+                    <a class="userBlock__enlace" href="../../html/Admin/loginvinculacion.html">Vinculación</a>
                 </div><!-- userBlock  -->
                 <div class="userBlock">
-                    <a class="userBlock__enlace" href="../../html/Admin/loginnuevo.html">Coordinación</a>
+                    <a class="userBlock__enlace" href="../../html/Admin/logincoordi.html">Coordinación</a>
                 </div><!-- userBlock  -->
                 <div class="userBlock">
                     <a class="userBlock__enlace" href="../../html/Admin/loginnuevo.html">Administración</a>
