--- a/PROYECTO/html/Admin/loginvinculacion.html
+++ b/PROYECTO/html/Admin/loginvinculacion.html
@@ -52,10 +52,10 @@
                     </div>
                 </form>
         </div>
-        <input class="cargo" type="text" id="cargo" placeholder="Administrador" value="Administrador" readonly>
+        <input class="cargo" type="text" id="cargo" placeholder="vinculacion" value="vinculacion" readonly>
         
     
     </div>
-    <script src="../../scripts/scriptloginadmin.js"></script>
+    <script src="../../scripts/scriptloginvincu.js"></script>
 </body>
 </html>
