--- a/PROYECTO/html/Admin/logindocente.html
+++ b/PROYECTO/html/Admin/logindocente.html
@@ -52,10 +52,10 @@
                     </div>
                 </form>
         </div>
-        <input class="cargo" type="text" id="cargo" placeholder="Administrador" value="Administrador" readonly>
+        <input class="cargo" type="text" id="cargo" placeholder="docente" value="docente" readonly>
         
     
     </div>
-    <script src="../../scripts/scriptloginadmin.js"></script>
+    <script src="../../scripts/scriptlogindocente.js"></script>
 </body>
 </html>
