--- a/PROYECTO/html/Docente/docente.html
+++ b/PROYECTO/html/Docente/docente.html
@@ -34,8 +34,8 @@
             <div class="menuFiltros__caja">
                 <select class="menuFiltros__selecion" name="Carrera" id="Carrera">
                     <option value="0">Elige una opcción</option>
-                    <option value="c1">Carrera 1</option>
-                    <option value="c2">Carrera 2</option>
+
+
                 </select>
                 <div class="menuFiltros__icon">
                     <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
@@ -44,10 +44,7 @@
             <div class="menuFiltros__caja">
                 <select class="menuFiltros__selecion"name="Materia" id="Materia">
                     <option value="0">Elige una opcción</option>
-                    <option value="m1c1">Materia1 C1</option>
-                    <option value="m2c1">Materia2 C1</option>
-                    <option value="m1c2">Materia1 C2</option>
-                    <option value="m2c2">Materia2 C2</option>
+                    
                 </select>
                 <div class="menuFiltros__icon">
                     <svg xmlns="http://www.w3.org/2000/svg" height="2.5em" viewBox="0 0 320 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#ffffff}</style><path d="M137.4 374.6c12.5 12.5 32.8 12.5 45.3 0l128-128c9.2-9.2 11.9-22.9 6.9-34.9s-16.6-19.8-29.6-19.8L32 192c-12.9 0-24.6 7.8-29.6 19.8s-2.2 25.7 6.9 34.9l128 128z"/></svg>
@@ -66,7 +63,10 @@
 
             </div>
         </div>
+
     </div>
+
+    <script src="../../scripts/carreras.js"></script>
 
     <footer class="footer">
         <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
