--- a/PROYECTO/html/contacto.html
+++ b/PROYECTO/html/contacto.html
@@ -27,7 +27,7 @@
             <main>
                 <h1 class="contacto__contenido">Contáctanos</h1>
                 <div class="contacto__contenido">
-                    <p>Envianos un comentario o visita el Manual</p>
+                    <p>Envíanos un comentario o visita el Manual</p>
                 </div> <!-- nosotros contenido -->
             </main>
             <form class="formulario">
@@ -58,7 +58,7 @@
                 </div>
     
                 <div class="contenedor izquierda">
-                        <input type="submit" value="Enviar" class="btn btn-cta">
+                    <input type="button" value="Enviar" class="btn btn-cta" onclick="registrarProducto()">
                 </div>
             </form>
         </div>
@@ -67,6 +67,8 @@
     <footer class="footer">
         <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
     </footer>
+
+    <script src="../scripts/contacto.js"></script>
     
 </body>
 </html>
