--- a/PROYECTO/html/Admin/admin.html
+++ b/PROYECTO/html/Admin/admin.html
@@ -23,7 +23,7 @@
             </nav>
         </header>
     </div>
-    <div class="container__admin">
+    <div class="container__registro">
         
         <div class="titulo__busqueda">
             <h1 class="Bus_titulo">Crea Usuarios</h1>
