--- a/PROYECTO/html/Admin/reportes.html
+++ b/PROYECTO/html/Admin/reportes.html
@@ -24,11 +24,29 @@
         </header>
     </div>
     
-    <div class="container__admin">
+    <div class="container__registro">
             <div class="titulo__busqueda">
                 <h1 class="Bus_titulo">Reportes de la Plataforma</h1>
                 <p>Accede a datos precisos y relevantes con nuestra herramienta de generación de reportes.</p>
-            </div>
+            </div class="contenedor">
+
+            <div class="bloques">
+                <div class="reportes">
+                    <h3 class="bloque__titulo">Reportes</h3>
+                    <p class="bloque__contenido">Reporte General de Visitas Guiadas o Eventos Académicos Externos</p>
+                    <div class="contenedor centro">
+                    <a class="btn btn-cta__tercero">Generar</a>
+                    </div>
+                </div><!-- bloque  -->
+                <div class="reportes">
+                    <h3 class="bloque__titulo">Estadísticas:</h3>
+                    <p class="bloque__contenido">Verifica el número de visitas guiadas solicitadas, aceptadas y completadas</p>
+                    <div class="contenedor centro">
+                    <a class="btn-cta__tercero">Generar</a>
+                    </div>
+                </div><!-- bloque  -->
+
+            </div><!-- bloques  -->
         </div>
 
     </div>
