--- a/PROYECTO/html/Docente/solicitudes.html
+++ b/PROYECTO/html/Docente/solicitudes.html
@@ -22,11 +22,31 @@
             </nav>
         </header>
     </div>
-    <div class="recuadro">
-        <h1>Solicitudes realizadas</h1>
-        <main class="contenedor">
-            <p>Aqui podaras consultar las solicitudes realizadas y revisar su estado</p>
-        </main>
+
+    
+    <div class="container__cuarto">
+        <div class="titulo__busqueda">
+            <h1 class="Bus_titulo">Solicitudes realizadas</h1>
+            <p>Aqui podras consultar las solicitudes realizadas y revisar su estado.</p>
+        </div class="contenedor">
+
+        <div class="solicitudes">
+            <div class="solicitud">
+                <h3 class="bloque__titulo">Visita Guiada 1</h3>
+                <p class="bloque__contenido">Información:</p>
+                <div class="contenedor izquierda">
+                    <p> NOMBRE: 
+                        FECHA:
+                    </p>
+                <a class="btn btn-cta__tercero">Reseña</a>
+                </div>
+            </div><!-- bloque  -->
+
+        </div><!-- bloques  -->
+
+
+
+
     </div>
 
     <footer class="footer">
