--- a/PROYECTO/html/Vinculacion/vinculacion.html
+++ b/PROYECTO/html/Vinculacion/vinculacion.html
@@ -53,10 +53,7 @@
                 </div>
             </div> <!-- menuFiltros__materia  -->
             <div class="menuFiltros__busqueda">
-                <input type="text" placeholder="Búscar">
-                <div class="btn_busqueda">
-                    <img class="imagen_busqueda" src="../../img/busqueda-de-lupa.png" alt="Buscar">
-                </div>
+                <a class="btn btn-cta">Buscar</a>
             </div> <!-- menuFiltros__busqueda  -->
         </div> <!-- menuFiltros  -->
         <div class="busquedas">
