--- a/PROYECTO/html/Coordinador/coordinador.html
+++ b/PROYECTO/html/Coordinador/coordinador.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="coordinador.html">Buscar</a></li>
                     <li><a href="validacion.html">Validación</a></li>
+                    <li><a href="reportes.html">Reportes</a></li>
                     <li><a href="../index.html" class="btn btn-cta">Salir</a></li>
                 </ul>
             </nav>
