--- a/PROYECTO/html/Coordinador/validacion.html
+++ b/PROYECTO/html/Coordinador/validacion.html
@@ -17,10 +17,38 @@
                 <ul>
                     <li><a href="coordinador.html">Buscar</a></li>
                     <li><a href="validacion.html">Validación</a></li>
+                    <li><a href="reportes.html">Reportes</a></li>
                     <li><a href="../index.html" class="btn btn-cta">Salir</a></li>
                 </ul>
             </nav>
         </header>
+    </div>
+
+
+    <div class="container__cuarto">
+        <div class="titulo__busqueda">
+            <h1 class="Bus_titulo">Validación de Solicitudes</h1>
+            <p>Aqui podras consultar las solicitudes realizadas y revisar su estado.</p>
+        </div class="contenedor">
+
+        <div class="solicitudes">
+            <div class="solicitud">
+                <h3 class="bloque__titulo">Visita Guiada 1</h3>
+                <p class="bloque__contenido">Información:</p>
+                <div class="contenedor izquierda">
+                    <p> NOMBRE: 
+                        FECHA:
+                    </p>
+                <a class="btn btn-cta__tercero">Pendiente</a>
+                <a class="btn btn-cta__tercero">Rechazado</a>
+                </div>
+            </div><!-- bloque  -->
+
+        </div><!-- bloques  -->
+
+
+
+
     </div>
     
 </body>
