--- a/PROYECTO/html/Vinculacion/vinculacion.html
+++ b/PROYECTO/html/Vinculacion/vinculacion.html
@@ -17,6 +17,7 @@
                 <ul>
                     <li><a href="vinculacion.html">Buscar</a></li>
                     <li><a href="validacionvisita.html">Validación</a></li>
+                    <li><a href="reportes.html">Reporte</a></li>
                     <li><a href="../index.html" class="btn btn-cta">Salir</a></li>
                 </ul>
             </nav>
