--- a/PROYECTO/html/Admin/materias.html
+++ b/PROYECTO/html/Admin/materias.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Materias</title>
     <link rel="stylesheet" href="../../public/css/main.css">
-    
 </head>
 <body class="body__usuarios">
     <div class="container__header">
@@ -58,9 +57,9 @@
                         </div>
             
                         <div class="contenedor izquierda">
-                            <input type="button" value="Crear" class="btn btn-cta" onclick="crearRegistro()"">
-                            <input type="button" value="Eliminar" class="btn btn-cta" onclick="eliminarRegistro()">
-                            <input type="button" value="Guardar" class="btn btn-cta" onclick="actualizarObj()">
+                            <input type="button" value="Crear" class="btn btn-cta" onclick="registrarProducto()">
+                            <input type="button" value="Eliminar" class="btn btn-cta" onclick="registrarProducto()">
+                            <input type="button" value="Guardar" class="btn btn-cta" onclick="registrarProducto()">
                         </div>
                     </form>
                 </div>
@@ -73,8 +72,6 @@
 
     </div>
 
-
-    <script type="text/javascript" src="../../scripts/adminAgElCr.js"></script>
     <footer class="footer">
         <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
     </footer>
