--- a/PROYECTO/html/Vinculacion/validacionvisita.html
+++ b/PROYECTO/html/Vinculacion/validacionvisita.html
@@ -35,12 +35,8 @@
             <div class="solicitud">
                 <h3 class="bloque__titulo">Visita Guiada 1</h3>
                 <p class="bloque__contenido">Información:</p>
-                <div class="contenedor izquierda">
-                    <p> NOMBRE: 
-                        FECHA:
-                    </p>
-                <a class="btn btn-cta__tercero">Aceptar</a>
-                <a class="btn btn-cta__tercero">Rechazar</a>
+                <div class="container__usuarios izquierda">
+                    
                 </div>
             </div><!-- bloque  -->
 
@@ -50,6 +46,6 @@
 
 
     </div>
-    
+    <script src="../../scripts/vincula.js"></script>
 </body>
 </html>
