--- a/PROYECTO/html/Coordinador/validacion.html
+++ b/PROYECTO/html/Coordinador/validacion.html
@@ -35,11 +35,12 @@
             <div class="solicitud">
                 <h3 class="bloque__titulo">Visita Guiada 1</h3>
                 <p class="bloque__contenido">Información:</p>
-                <div class="container__usuarios">
-                    <ul id="lista-usuarios"></ul>
-                    
-                <!-- <a class="btn btn-cta__tercero">Pendiente</a>
-                <a class="btn btn-cta__tercero">Rechazado</a> -->
+                <div class="contenedor izquierda">
+                    <p> NOMBRE: 
+                        FECHA:
+                    </p>
+                <a class="btn btn-cta__tercero">Pendiente</a>
+                <a class="btn btn-cta__tercero">Rechazado</a>
                 </div>
             </div><!-- bloque  -->
 
@@ -49,6 +50,6 @@
 
 
     </div>
-    <script src="../../scripts/mostrar.js"></script>
+    
 </body>
 </html>
