--- a/PROYECTO/html/Docente/solicitudes.html
+++ b/PROYECTO/html/Docente/solicitudes.html
@@ -35,7 +35,10 @@
                 <h3 class="bloque__titulo">Visita Guiada 1</h3>
                 <p class="bloque__contenido">Información:</p>
                 <div class="contenedor izquierda">
-                    
+                    <p> NOMBRE: 
+                        FECHA:
+                    </p>
+                <a class="btn btn-cta__tercero">Reseña</a>
                 </div>
             </div><!-- bloque  -->
 
@@ -49,6 +52,6 @@
     <footer class="footer">
         <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
     </footer>
-    <script src="../../scripts/datos.js"></script>
+    
 </body>
 </html>
