--- a/PROYECTO/html/Coordinador/validacion.html
+++ b/PROYECTO/html/Coordinador/validacion.html
@@ -33,7 +33,7 @@
 
         <div class="solicitudes">
             <div class="solicitud">
-                <h3 class="bloque__titulo">Visita Guiada 1</h3>
+                <h3 class="bloque__titulo">Cuatrimestre: SEPTIEMBRE-DICIEMBRE 2023</h3>
                 <p class="bloque__contenido">Información:</p>
                 <div class="container__usuarios">
                     <ul id="lista-usuarios"></ul>
@@ -45,10 +45,11 @@
 
         </div><!-- bloques  -->
 
-
-
-
     </div>
     <script src="../../scripts/mostrar.js"></script>
+
+    <footer class="footer">
+        <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
