--- a/PROYECTO/html/Docente/docente.html
+++ b/PROYECTO/html/Docente/docente.html
@@ -72,6 +72,16 @@
                                             id="nombreEmpresa"
                                         >
                                     </div>
+                                    
+                                    <div class="campoV">
+                                        <h4 class="campoV__label" for="idUsuario">1. Usuario:</h4>
+                                        <input 
+                                            class="campoV__field"
+                                            type="text" 
+                                            placeholder="Usuario" 
+                                            id="idUsuario"
+                                        >
+                                    </div>
                                     <div class="campoV">
                                         <h4 class="campoV__label" for="grupo">2. Grupo:</h4>
                                         <input 
@@ -92,8 +102,10 @@
                                     </div>
                                 </div>
                                 <div class="contenedorV izquierdaV">
-                                        <input type="submit" value="Aceptar y Solicitar" class="btn btn-cta__tercero" onclick="registrarSolicitud()">
+                                    <a type="submit" class="btn btn-cta__tercero">GUARDAR</a>
                                 </div>
+
+                                
                             </form>
                         </div>
                     </div>
@@ -107,8 +119,8 @@
         </div>
     </div>
 
-    <script src="../scripts/solicitud.js"></script>
-    <script src="../../scripts/empresas.js"></script>
+   
+    <script src="../../scripts/solicitud.js"></script>
 
     <footer class="footer">
         <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
