--- a/PROYECTO/html/Vinculacion/validacionvisita.html
+++ b/PROYECTO/html/Vinculacion/validacionvisita.html
@@ -47,5 +47,9 @@
 
     </div>
     <script src="../../scripts/vincula.js"></script>
+
+    <footer class="footer">
+        <p class="footer__texto">EduXplora© -- todos los derechos reservados</p>
+    </footer>
 </body>
 </html>
