--- a/PROYECTO/html/Coordinador/validacion.html
+++ b/PROYECTO/html/Coordinador/validacion.html
@@ -25,7 +25,7 @@
     </div>
 
 
-    <div class="container__cuarto">
+    <div class="contenedor__solitudes">
         <div class="titulo__busqueda">
             <h1 class="Bus_titulo">Validación de Solicitudes</h1>
             <p>Aqui podras consultar las solicitudes realizadas y revisar su estado.</p>
