--- a/PROYECTO/html/Docente/solicitudes.html
+++ b/PROYECTO/html/Docente/solicitudes.html
@@ -24,7 +24,7 @@
     </div>
 
     
-    <div class="container__cuarto">
+    <div class="contenedor__solitudes">
         <div class="titulo__busqueda">
             <h1 class="Bus_titulo">Solicitudes realizadas</h1>
             <p>Aqui podras consultar las solicitudes realizadas y revisar su estado.</p>
@@ -35,13 +35,8 @@
                 <h3 class="bloque__titulo">Visita Guiada 1</h3>
                 <p class="bloque__contenido">Información:</p>
                 <div class="contenedor izquierda">
-                    <p> NOMBRE: 
-                        FECHA:
-                    </p>
                 <div class="opcionvf">
-                    <a href="#IrVentanaFlotante">
-                            <p class="btn btn-cta__tercero">Reseña de visita</p>
-                    </a>
+                    
                 </div>
                 <div id="IrVentanaFlotante" class="modal">
                     <div class="ventana">
