--- a/PROYECTO/html/Docente/solicitudes.html
+++ b/PROYECTO/html/Docente/solicitudes.html
@@ -106,7 +106,7 @@
                                 </div>
                             </div>
                             <div class="contenedorV izquierdaV">
-                                    <input type="submit" value="Aceptar y enviar" class="btn btn-cta__tercero" onclick="registrarResenia()">
+                                <a type="submit" class="btn btn-cta__tercero">GUARDAR</a>
                             </div>
                         </form>
                     </div>
@@ -116,8 +116,7 @@
             
 
         </div><!-- bloques  -->
-
-        <script src="../../scripts/reseña.js"></script>
+        
         <script src="../../scripts/datos.js"></script>
 
     </div>
